examples/errors/parsing/refined_auto.rcn
// Refined program with exfalso
main : (x : Int) [pure] =
  exfalso
